reverted to origin data

--- a/PrivBayes/notebooks/DataSynthesizer__correlated_attribute_mode.ipynb
+++ b/PrivBayes/notebooks/DataSynthesizer__correlated_attribute_mode.ipynb
@@ -53,7 +53,7 @@
     "parent_directory  = os.path.dirname(current_directory)\n",
     "data_directory    = os.path.join(parent_directory, 'data')\n",
     "\n",
-    "input_data        = os.path.join(data_directory, 'real_data.csv')\n",
+    "input_data        = os.path.join(data_directory, 'CEData.csv')\n",
     "synthetic_data    = os.path.join(data_directory, 'synthetic_data.csv')\n",
     "description_file  = os.path.join(data_directory, 'description.json')"
    ]
