Revert "lib bib"
This reverts commit 3951f4de989fd75bd1a22005568a1f6076f9423f.

--- a/PrivBayes/notebooks/DataSynthesizer__correlated_attribute_mode.ipynb
+++ b/PrivBayes/notebooks/DataSynthesizer__correlated_attribute_mode.ipynb
@@ -20,7 +20,7 @@
     "from DataSynthesizer.DataDescriber import DataDescriber\n",
     "from DataSynthesizer.DataGenerator import DataGenerator\n",
     "from DataSynthesizer.ModelInspector import ModelInspector\n",
-    "from DataSynthesizer.bib.utils import read_json_file, display_bayesian_network\n",
+    "from DataSynthesizer.lib.utils import read_json_file, display_bayesian_network\n",
     "\n",
     "import pandas as pd\n",
     "import os"
